--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlowState Pro - Executive AI Analytics Platform</title>
-    <meta name="description" content="Executive-level AI productivity platform with TensorFlow integration, SQL analytics, and advanced machine learning capabilities">
-    <meta name="keywords" content="AI analytics, machine learning, TensorFlow, executive dashboard, productivity intelligence">
-    <meta name="author" content="FlowState Pro Executive Edition">
-    <meta name="theme-color" content="#3b82f6">
+    <title>Academia Hub - Ultimate Study Companion</title>
+    <meta name="description" content="Academia Hub - Ultimate study companion with AI tutoring, task management, voice features, and intelligent study tracking">
+    <meta name="keywords" content="academia, study hub, AI tutor, academic planner, study timer, focus app, education">
+    <meta name="author" content="Academia Hub">
+    <meta name="theme-color" content="#0284c7">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-192.png">
+    <link rel="apple-touch-icon" href="academia-icon-192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
+
     
     <!-- Enhanced Meta Tags for Executive Platform -->
     <meta property="og:title" content="FlowState Pro - Executive AI Analytics Platform">
@@ -907,8 +908,8 @@
     <!-- FlowState Pro Authentication Modal (Preserved from original) -->
     <div class="auth-modal" id="authModal">
         <div class="auth-content">
-            <div class="auth-logo">FS</div>
-            <div class="auth-title" id="authTitle">FlowState Pro Executive</div>
+            <div class="auth-logo">AH</div>
+            <div class="auth-title" id="authTitle">Academic Hub </div>
             <div class="auth-subtitle" id="authSubtitle">Access your executive AI analytics platform</div>
             
             <form class="auth-form" id="authForm">
@@ -928,10 +929,10 @@
         <!-- Executive Header -->
         <div class="executive-header">
             <div class="executive-title">
-                <div class="executive-logo">FS</div>
+                <div class="executive-logo">AH</div>
                 <div>
-                    <div class="executive-name">FlowState Pro Executive</div>
-                    <div class="executive-subtitle">AI-Powered Analytics & Intelligence Platform</div>
+                    <div class="executive-name">Academic Pro </div>
+                    <div class="executive-subtitle">Ultimate Study Companion</div>
                 </div>
             </div>
             <div style="display: flex; align-items: center; gap: 24px;">
