--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Hub - My Subjects Dashboard</title>
     <meta name="description" content="Academic dashboard for BTech AIML Semester 3">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#667eea">
+
     <style>
         * {
             margin: 0;
