--- a/index.html
+++ b/index.html
@@ -1538,6 +1538,460 @@
         });
 
         console.log('🎓 Academic Hub JavaScript Loaded Successfully!');
+   
+        <style>/* Analytics Styles */
+.analytics-overview {
+    max-width: 1200px;
+}
+
+.stats-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.stat-card {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 24px;
+    text-align: center;
+    border: 1px solid #2d2e36;
+}
+
+.stat-number {
+    font-size: 32px;
+    font-weight: 700;
+    color: #667eea;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.stat-label {
+    color: #8e8e93;
+    font-size: 14px;
+}
+
+.progress-charts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+}
+
+.chart-container {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 24px;
+    border: 1px solid #2d2e36;
+}
+
+.weekly-chart {
+    display: flex;
+    align-items: end;
+    gap: 8px;
+    height: 200px;
+}
+
+.chart-bar {
+    flex: 1;
+    background: #667eea;
+    border-radius: 4px 4px 0 0;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    padding-bottom: 8px;
+    color: white;
+    font-size: 12px;
+}
+
+/* Schedule Styles */
+.schedule-container {
+    max-width: 1200px;
+}
+
+.schedule-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.schedule-grid {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.time-slots {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding-top: 40px;
+}
+
+.time-slot {
+    font-size: 12px;
+    color: #8e8e93;
+    text-align: right;
+}
+
+.days-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 16px;
+}
+
+.day-column {
+    background: #1a1b23;
+    border-radius: 12px;
+    overflow: hidden;
+    border: 1px solid #2d2e36;
+}
+
+.day-header {
+    background: #2d2e36;
+    padding: 12px;
+    text-align: center;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+.schedule-events {
+    padding: 16px;
+    min-height: 400px;
+}
+
+.schedule-event {
+    background: var(--accent-color, #667eea);
+    color: white;
+    padding: 8px 12px;
+    margin-bottom: 8px;
+    border-radius: 6px;
+    font-size: 12px;
+}
+
+.schedule-event.math { background: #667eea; }
+.schedule-event.dsa { background: #4ecdc4; }
+.schedule-event.os { background: #f0932b; }
+.schedule-event.prog { background: #f9ca24; }
+
+.upcoming-events {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 24px;
+    border: 1px solid #2d2e36;
+}
+
+.deadline-list {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.deadline-item {
+    display: flex;
+    gap: 16px;
+    padding: 12px;
+    background: #2d2e36;
+    border-radius: 8px;
+}
+
+.deadline-date {
+    background: #667eea;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 6px;
+    font-weight: 600;
+    min-width: 60px;
+    text-align: center;
+}
+
+/* Materials Styles */
+.materials-overview {
+    max-width: 1200px;
+}
+
+.materials-summary {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 24px;
+}
+
+.summary-card {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #2d2e36;
+    min-width: 150px;
+}
+
+.summary-number {
+    display: block;
+    font-size: 24px;
+    font-weight: 700;
+    color: #667eea;
+    margin-bottom: 4px;
+}
+
+.materials-filter {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 24px;
+}
+
+.materials-filter select {
+    padding: 8px 12px;
+    background: #2d2e36;
+    border: 1px solid #3a3b42;
+    border-radius: 6px;
+    color: #ffffff;
+}
+
+/* Notes Styles */
+.notes-container {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    gap: 24px;
+    height: 600px;
+    max-width: 1200px;
+}
+
+.notes-sidebar {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 20px;
+    border: 1px solid #2d2e36;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.notes-search input {
+    width: 100%;
+    padding: 8px 12px;
+    background: #2d2e36;
+    border: 1px solid #3a3b42;
+    border-radius: 6px;
+    color: #ffffff;
+}
+
+.notes-list {
+    flex: 1;
+    overflow-y: auto;
+}
+
+.note-item {
+    padding: 12px;
+    margin-bottom: 8px;
+    background: #2d2e36;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.note-item:hover {
+    background: #3a3b42;
+}
+
+.note-item.active {
+    background: #667eea;
+}
+
+.note-title {
+    font-weight: 600;
+    color: #ffffff;
+    margin-bottom: 4px;
+}
+
+.note-preview {
+    font-size: 12px;
+    color: #8e8e93;
+    margin-bottom: 4px;
+}
+
+.note-date {
+    font-size: 10px;
+    color: #6d6d70;
+}
+
+.notes-editor {
+    background: #1a1b23;
+    border-radius: 12px;
+    border: 1px solid #2d2e36;
+    display: flex;
+    flex-direction: column;
+}
+
+.note-header {
+    display: flex;
+    gap: 12px;
+    padding: 20px;
+    border-bottom: 1px solid #2d2e36;
+}
+
+.note-title-input {
+    flex: 1;
+    background: transparent;
+    border: none;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.note-header select {
+    background: #2d2e36;
+    border: 1px solid #3a3b42;
+    border-radius: 6px;
+    color: #ffffff;
+    padding: 6px 12px;
+}
+
+.note-toolbar {
+    display: flex;
+    gap: 8px;
+    padding: 12px 20px;
+    border-bottom: 1px solid #2d2e36;
+}
+
+.note-toolbar button {
+    padding: 6px 10px;
+    background: #2d2e36;
+    border: 1px solid #3a3b42;
+    border-radius: 4px;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.note-content {
+    flex: 1;
+    padding: 20px;
+    background: transparent;
+    border: none;
+    color: #ffffff;
+    resize: none;
+    font-family: inherit;
+    line-height: 1.6;
+}
+
+/* Goals Styles */
+.goals-container {
+    max-width: 1200px;
+}
+
+.goals-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.goals-filter {
+    display: flex;
+    gap: 8px;
+}
+
+.filter-btn {
+    padding: 8px 16px;
+    background: #2d2e36;
+    border: 1px solid #3a3b42;
+    border-radius: 6px;
+    color: #8e8e93;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.filter-btn.active {
+    background: #667eea;
+    color: #ffffff;
+}
+
+.goals-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 24px;
+}
+
+.goal-card {
+    background: #1a1b23;
+    border-radius: 12px;
+    padding: 24px;
+    border: 1px solid #2d2e36;
+    transition: all 0.3s ease;
+}
+
+.goal-card:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.goal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 16px;
+}
+
+.goal-header h3 {
+    font-size: 16px;
+    color: #ffffff;
+    margin: 0;
+}
+
+.goal-status {
+    padding: 4px 12px;
+    border-radius: 12px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.goal-status.active {
+    background: #007AFF;
+    color: white;
+}
+
+.goal-status.completed {
+    background: #4ecdc4;
+    color: white;
+}
+
+.goal-progress {
+    margin-bottom: 16px;
+}
+
+.goal-progress .progress-bar {
+    height: 6px;
+    background: #2d2e36;
+    border-radius: 3px;
+    overflow: hidden;
+    margin-bottom: 8px;
+}
+
+.goal-progress .progress-fill {
+    height: 100%;
+    background: #667eea;
+    border-radius: 3px;
+    transition: width 0.3s ease;
+}
+
+.progress-text {
+    font-size: 12px;
+    color: #8e8e93;
+}
+
+.goal-details {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.goal-target,
+.goal-deadline {
+    font-size: 12px;
+    color: #8e8e93;
+}
+     </style>
     </script>
 </body>
 </html>
