--- a/index.html
+++ b/index.html
@@ -2690,3 +2690,6 @@
 
         // ========== CSS ANIMATIONS ==========
         const
+            </script> ⬅️ MAKE SURE THIS CLOSING TAG IS HERE
+</body>
+</html>
