--- a/index.html
+++ b/index.html
@@ -4,99 +4,172 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Hub Pro</title>
-    <meta name="description" content="PWA for SRM B.Tech CSE AI/ML Semester 3 management">
-    <link rel="manifest" href="manifest.json">
+    <meta name="description" content="Advanced PWA for SRM B.Tech CSE AI/ML Semester 3">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#1a1b23">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <script defer src="service-worker.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.10.5/brython.min.js"></script> <!-- Free Brython for Python in browser -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script> <!-- Free TensorFlow.js -->
+    <script src="script.js" defer></script>
+    <style>
+        /* CSS Variables for Themes */
+        :root {
+            --bg-primary: #f5f5f7;
+            --bg-secondary: #ffffff;
+            --text-primary: #000000;
+            --text-secondary: #6d6d70;
+            --accent-primary: #007aff;
+            --glass-bg: rgba(255,255,255,0.8);
+            --shadow: 0 8px 32px rgba(0,0,0,0.2);
+            --blur: blur(20px);
+        }
+
+        .dark-theme {
+            --bg-primary: #1a1b23;
+            --bg-secondary: #2c2d35;
+            --text-primary: #ffffff;
+            --text-secondary: #a5a5a9;
+            --accent-primary: #0a84ff;
+            --glass-bg: rgba(26,27,35,0.8);
+        }
+
+        /* Base Styles */
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            background: var(--bg-primary);
+            color: var(--text-primary);
+            overflow: hidden;
+            transition: all 0.3s ease;
+        }
+
+        /* Loading Screen */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg-primary);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            transition: opacity 1s ease;
+        }
+
+        .logo-animation {
+            font-size: 64px;
+            font-weight: bold;
+            color: var(--accent-primary);
+            animation: stun-effect 2s ease-in-out;
+        }
+
+        @keyframes stun-effect {
+            0% { transform: scale(0); opacity: 0; }
+            50% { transform: scale(1.2); opacity: 1; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        /* Dashboard Grid */
+        .dashboard {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 24px;
+            padding: 32px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .subject-card {
+            background: var(--glass-bg);
+            backdrop-filter: var(--blur);
+            border-radius: 16px;
+            padding: 24px;
+            box-shadow: var(--shadow);
+            transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
+
+        .subject-card:hover {
+            transform: perspective(1000px) rotateY(5deg) scale(1.05);
+        }
+
+        /* Theme Toggle */
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--accent-primary);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { box-shadow: 0 0 0 0 rgba(0,122,255,0.7); }
+            70% { box-shadow: 0 0 0 10px rgba(0,122,255,0); }
+            100% { box-shadow: 0 0 0 0 rgba(0,122,255,0); }
+        }
+
+        /* Username Display */
+        .username-display {
+            font-size: 24px;
+            font-weight: bold;
+            margin: 20px;
+            color: var(--accent-primary);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .dashboard {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
-<body class="light-theme"> <!-- Default to light; JS will handle toggle -->
+<body>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+        <div class="logo-animation">AH Pro</div>
+    </div>
 
-    <!-- Login Screen -->
-    <div id="login-screen" class="login-container">
-        <canvas id="particle-canvas" class="particle-canvas"></canvas>
-        <div class="login-form glass">
-            <h1 class="login-title">Academic Hub Pro</h1>
-            <p class="login-subtitle">SRM B.Tech CSE AI/ML</p>
-            <input type="text" id="username" placeholder="Username" class="form-input">
-            <input type="password" id="password" placeholder="Password" class="form-input">
-            <button onclick="login()" class="btn btn-primary full-width">Login</button>
-            <p id="login-error" class="error-message hidden">Invalid credentials</p>
-            <p class="form-help">Test: praksharvai / srm2025</p>
+    <!-- Username Prompt (Modal) -->
+    <div id="username-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); align-items: center; justify-content: center; z-index: 10000;">
+        <div style="background: var(--glass-bg); padding: 32px; border-radius: 16px; box-shadow: var(--shadow); text-align: center;">
+            <h2>Welcome to Academic Hub Pro</h2>
+            <input type="text" id="username-input" placeholder="Enter your name" style="width: 100%; padding: 12px; margin: 16px 0; border-radius: 8px; border: 1px solid var(--text-secondary);">
+            <button onclick="saveUsername()" style="background: var(--accent-primary); color: white; padding: 12px 24px; border: none; border-radius: 8px; cursor: pointer;">Continue</button>
         </div>
     </div>
 
-    <!-- Main App (hidden until login) -->
-    <div id="main-app" class="hidden">
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <div class="sidebar-header">
-                <div class="logo">
-                    <div class="logo-icon">AH</div>
-                    <div class="logo-text">Academic Hub Pro</div>
+    <!-- Main App -->
+    <div id="main-app" style="display: none;">
+        <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+        <div class="username-display" id="user-name-display">Welcome, Guest</div>
+        <div class="dashboard">
+            <!-- Subject Cards -->
+            <div class="subject-card">
+                <h3>Boundary Value Problems</h3>
+                <p>Code: 2IMABO2IT | Credits: 4 | Faculty: Dr. Prince Chelladurai S</p>
+                <div class="progress-bar" style="background: var(--bg-secondary); height: 8px; border-radius: 4px; overflow: hidden;">
+                    <div style="width: 65%; height: 100%; background: var(--accent-primary); transition: width 1s ease;"></div>
                 </div>
-                <div class="search-container">
-                    <span class="search-icon">🔍</span>
-                    <input type="text" class="search-input" placeholder="Search...">
-                </div>
+                <p>Progress: 65% | Study Time: 0 min</p>
+                <div class="file-upload" ondrop="handleDrop(event, 'boundary')" ondragover="event.preventDefault();">Drop files here</div>
             </div>
-            <div class="sidebar-nav">
-                <div class="nav-section">
-                    <div class="nav-title">Dashboard</div>
-                    <div class="nav-item active" data-section="dashboard">Dashboard</div>
-                    <div class="nav-item premium-locked" data-section="analytics">Analytics</div>
-                    <div class="nav-item premium-locked" data-section="schedule">Schedule</div>
-                </div>
-                <div class="nav-section">
-                    <div class="nav-title">AI Tools</div>
-                    <div class="nav-item" data-section="ai-tools">AI Tools</div>
-                </div>
-                <div class="nav-section">
-                    <div class="nav-title">Study Tools</div>
-                    <div class="nav-item" data-section="study-tools">Study Tools</div>
-                </div>
-                <div class="nav-section">
-                    <div class="nav-title">Account</div>
-                    <div class="nav-item" data-section="account">Account</div>
-                </div>
+            <!-- Repeat for other subjects with correct details, progress, etc. -->
+            <div class="subject-card">
+                <h3>Data Structures and Algorithms</h3>
+                <p>Code: 2ICSC2O1J | Credits: 4 | Faculty: Dr. J. Marhharan</p>
+                <div class="progress-bar"><div style="width: 50%; background: var(--accent-primary);"></div></div>
+                <p>Progress: 50% | Study Time: 0 min</p>
+                <div class="file-upload" ondrop="handleDrop(event, 'dsa')" ondragover="event.preventDefault();">Drop files here</div>
             </div>
-        </div>
-
-        <!-- Main Content -->
-        <div class="main-content">
-            <!-- Top Bar -->
-            <div class="top-bar">
-                <div class="hamburger-menu hidden" onclick="toggleSidebar()">☰</div>
-                <h1 class="page-title">Academic Hub Pro</h1>
-                <div class="top-bar-right">
-                    <div class="live-clock" id="live-clock"></div>
-                    <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-                </div>
-            </div>
-
-            <!-- Dashboard Section -->
-            <div class="content-section active" id="dashboard-section">
-                <div class="timetable-dashboard">
-                    <h2>Semester 3 Timetable</h2>
-                    <div class="subject-grid">
-                        <!-- Subject Cards (Generated in JS) -->
-                    </div>
-                </div>
-            </div>
-
-            <!-- Other Sections (Premium Locked Example) -->
-            <div class="content-section" id="analytics-section">
-                <h2>Analytics (Premium Feature)</h2>
-                <p>Upgrade to access advanced analytics.</p>
-            </div>
-            <div class="content-section" id="schedule-section">
-                <h2>Schedule (Premium Feature)</h2>
-                <p>Upgrade to access smart scheduling.</p>
-            </div>
-            <!-- Add other sections similarly -->
+            <!-- Add remaining 5 subjects similarly -->
         </div>
     </div>
-
 </body>
 </html>
