--- a/index.html
+++ b/index.html
@@ -2440,7 +2440,7 @@
                     '21MAB201T': {
                         code: '21MAB201T',
                         title: 'Transforms and Boundary Value Problems',
-                        faculty: 'Dr. V. Vidhya',
+                        faculty: 'Dr. P. Godhandaraman',
                         credits: 4,
                         category: 'Basic Science',
                         room: 'LH905',
@@ -2530,7 +2530,7 @@
                     '21LEM202T': {
                         code: '21LEM202T',
                         title: 'UHV-II: Universal Human Values',
-                        faculty: 'Dr. Caleb Theodar M',
+                        faculty: 'Mr.D.Boopathi',
                         credits: 3,
                         category: 'Engineering Science',
                         room: 'To be Alloted',
